fixed minor bugs in index.jsp and records.jsp

--- a/src/main/webapp/css/records.css
+++ b/src/main/webapp/css/records.css
@@ -1,3 +1,8 @@
+.wrapper-container{
+    color:#A7A1AE;
+    background-color:#0E1119;
+}
+
 body{
     color:#A7A1AE;
     background-color:#1F2739;
