--- a/src/main/webapp/css/friend-requests.css
+++ b/src/main/webapp/css/friend-requests.css
@@ -38,7 +38,26 @@
     color: #4F7091;
     font-size: 18px;
 }
+.friend-list .type-box {
+    text-align: center;
+    position: absolute;
+    top: 55px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    color: #4F7091;
+    font-size: 18px;
+}
 .friend-list .user-name-box {
+    position: absolute;
+    top: 80px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    text-align: center;
+    font-size: 12px;
+}
+.friend-list .user-type-box {
     position: absolute;
     top: 80px;
     left: 50%;
@@ -94,7 +113,25 @@
     color: #4F7091;
     font-size: 18px;
 }
+.friend-requests .type-box {
+    text-align: left;
+    position: absolute;
+    top: 20px;
+    left: 90px;
+    width: 200px;
+    color: #4F7091;
+    font-size: 18px;
+}
 .friend-requests .user-name-box {
+    position: absolute;
+    top: 50px;
+    left: 90px;
+    width: 200px;
+    text-align: left;
+    font-size: 12px;
+    line-height: 16px;
+}
+.friend-requests .user-type-box {
     position: absolute;
     top: 50px;
     left: 90px;
