--- a/src/main/webapp/css/friends.scss
+++ b/src/main/webapp/css/friends.scss
@@ -1,9 +1,12 @@
 * {
     box-sizing: border-box;
 }
-
+.navbar-custom{
+    background-color: #434750;
+}
 body {
     width: 100%;
+    background-color: #434750;
 }
 
 img {
@@ -17,7 +20,7 @@ img {
 
 #font-style {
     font-family: 'Montserrat', sans-serif;
-    color: 	#0000FF;
+    color: #FFFFFF;
 }
 
 .modal-header {
@@ -26,7 +29,7 @@ img {
 }
 
 .modal-body {
-    background-color: #ADD8E6;
+    background-color: #1F2739;
 }
 
 .card-body {
